@@ -1,20 +1,21 @@
-FROM maven:3.6.1-jdk-8-alpine as builder
+FROM navikt/java:11
 
 # sett riktig tidssone
 ENV TZ Europe/Oslo
 RUN ln -fs /usr/share/zoneinfo/Europe/Oslo /etc/localtime
 
-ADD / /source
-WORKDIR /source
-RUN mvn package -DskipTests
-
+COPY java-debug.sh /init-scripts/08-java-debug.sh
 COPY init.sh /init-scripts/init.sh
-RUN chmod +x /init-scripts/init.sh
-CMD ./init-scripts/init.sh
 
-FROM navikt/java:8-appdynamics
+#COPY init.sh /init-scripts/init.sh
+#RUN chmod +x /init-scripts/init.sh
+#CMD ./init-scripts/init.sh
+
+# Netty bruker jdk.internal.misc.Unsafe så dette må åpnes opp for max ytelse
+ENV JAVA_OPTS="${JAVA_OPTS} --add-opens java.base/jdk.internal.misc=ALL-UNNAMED"
+ENV JAVA_OPTS="${JAVA_OPTS} --add-opens java.base/java.nio=ALL-UNNAMED"
+ENV JAVA_OPTS="${JAVA_OPTS} -Dio.netty.tryReflectionSetAccessible=true"
+ENV JAVA_OPTS="${JAVA_OPTS} --illegal-access=deny"
 ENV JAVA_OPTS="${JAVA_OPTS} -XX:MaxRAMPercentage=65.0"
-#ENV JAVA_OPTS="${JAVA_OPTS} -Xdebug -Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=n"
-ENV APPD_ENABLED=true
 
-COPY --from=builder /source/target/mininnboks-api /app
+COPY build/libs/*.jar ./
